--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -18,7 +18,7 @@
 					<h1><%= player %>'s Dossier</h1>
 					
 					<strong>email</strong>: <%= user.local.email %><br>
-					<strong>Tag  <%= player[0].tag %> </strong>: <br>
+					<strong>Tag:  <%= player[0].tag %> </strong> <br>
 					
 			</div>
 		</div>
