--- a/public/css/main.css
+++ b/public/css/main.css
@@ -31,11 +31,23 @@ body {
 }
 
 .remove-button {
-	border-radius: 50%; 
-	height: 50px; 
-	width: 50px;
-	border-width: 1px;
-	
+	border-radius: 10%; 
+	height: 30px; 
+	width: 30px;
+	border-width: 2px;
+}
+
+.nameSpace {
+	padding-bottom: 15px;
+}
+
+#selectedPlayers {
+	margin-top: 25px;
+	margin-bottom: 35px;
+}	
+
+#belowPlayerHeader {
+	margin-bottom: 25px;
 }
 
 #startButton {
