--- a/public/css/main.css
+++ b/public/css/main.css
@@ -4,7 +4,10 @@ body {
 	font-family: courier;
 }
 
+/* profile.ejs css*/
+
 .box {
+	margin-top: 40px;
 	border-width: 5px;
 	border-style: double;
 	padding-bottom: 50px;
@@ -17,6 +20,15 @@ body {
 	border-style: double;
 	padding-top: 50px;
 }
+
+#ImageContainer { width: 300px; }
+
+img.fakePhotoForSizing {
+    width:100%;
+	padding-bottom: 45px;
+}
+
+/*close profile.ejs css */
 
 .signIn {
 	text-align: center;
