--- a/public/css/main.css
+++ b/public/css/main.css
@@ -47,10 +47,12 @@ img.fakePhotoForSizing {
 
 .remove-button {
 	border-radius: 10%; 
+
 	height: 21px; 
 	width: 30px;
 	border-width: 2px;
 }
+
 
 #completeGameTop {
 	padding-top: 35px;
@@ -76,6 +78,12 @@ img.fakePhotoForSizing {
 
 .leaderboardButtons {
 	margin-top: 15px;
+	margin-top: 25px;
+	margin-bottom: 35px;
+}	
+
+#belowPlayerHeader {
+	margin-bottom: 25px;
 }
 
 #startButton {
