--- a/views/creategame.ejs
+++ b/views/creategame.ejs
@@ -5,6 +5,36 @@
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
+	<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      
+      <a class="navbar-brand" href="#"><img alt="Paranoia Logo" src="images/paraCopy.png"></a>
+      	
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/logout">Logout</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agent Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/consolepage.html">Go Home</a></li>
+            <li><a href="/creategame">Go to Game</a></li>
+            <li><a href="/completeGame">Rules</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
 	<div class="container-fluid row" id="gameMaker">
 		<form action="/api/gameRoutes" class="gameFields" method="post" id="gameForm" role="form">
 			<legend>Create Your Game</legend>
