--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,9 +9,11 @@
 	<div class="container box">
 		<div class="row"> 
 			<div>
-				<h1><%= player[0].handle %>'s Dossier</h1>
+				<h1><%= user.local.handle %>'s Dossier</h1>
+					
 				<strong>email</strong>: <%= user.local.email %><br>
-				<strong>Tag:  <%= player[0].tag %> </strong> <br>
+					
+				strong>Tag:   </strong> <br>
 			</div>
 		</div>
 	</div>
