--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -10,6 +10,7 @@
     </style>
 </head>
 <body>
+    
 <div class="container">
 <div class="col-sm-6 col-sm-offset-3">
 
@@ -19,7 +20,7 @@
         <div class="alert alert-danger"><%= message %></div>
     <% } %>
 
-    <!-- LOGIN FORM -->
+    <!-- SIGNUP FORM -->
     <form action="/signup" method="post">
         <div class="form-group">
             <label>Email</label>
@@ -28,6 +29,10 @@
         <div class="form-group">
             <label>Password</label>
             <input type="password" class="form-control" name="password">
+        </div>
+        <div class="form-group">
+            <label>Handle</label>
+            <input type="handle" class="form-control" name="handle">
         </div>
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
