Added tag entry to signup

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -44,7 +44,7 @@
 					
 				<strong>email</strong>: <%= user.local.email %><br>
 					
-				strong>Tag:   </strong> <br>
+				<strong>Tag:   </strong> <%= user.local.tag %><br>
 			</div>
 		</div>
 	</div>
