--- a/views/completeGame.ejs
+++ b/views/completeGame.ejs
@@ -7,6 +7,39 @@
 </head>
 
 <body>
+
+<nav class="navbar navbar-inverse">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      
+      <a class="navbar-brand"><img alt="Paranoia Logo" src="images/paraCopy.png"></a>
+      	
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      
+      <ul class="nav navbar-nav navbar-right">
+        <li><a href="/logout">Logout</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Agent Menu <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/signup">Sign Up</a></li>
+            <li><a href="/consolepage.html">Go Home</a></li>
+            <li><a href="/completeGame">Go to Game</a></li>
+            <li><a href="/createGame">Start A Game</a></li>
+            <li><a href="/completeGame">Rules</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="/logout">Logout</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
+</nav>
+
 	<div class="container" id="completeGameTop">
 		<strong>Game Name</strong>: <%= game.gameName %><br>
 		<form action=<%= "/api/gamePlayer/" + game._id %> method="POST">
