--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -34,6 +34,10 @@
             <label>Handle</label>
             <input type="handle" class="form-control" name="handle">
         </div>
+        <div class="form-group">
+            <label>tag</label>
+            <input type="number" class="form-control" name="tag">
+        </div>
 
         <button type="submit" class="btn btn-warning btn-lg">Signup</button>
     </form>
@@ -46,5 +50,6 @@
 </div>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.js"></script>
+<script type="text/javascript" src="/js/pickplayers.js"></script>
 </body>
 </html>
