--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -42,9 +42,9 @@
 			<div>
 				<h1><%= user.local.handle %>'s Dossier</h1>
 					
-				<strong>email</strong>: <%= user.local.email %><br>
+				<h2><strong>email</strong>: <%= user.local.email %><br></h2>
 					
-				strong>Tag:   </strong> <br>
+				<h2><strong>Tag:   </strong> <%= user.local.tag %> <br></h2>
 			</div>
 		</div>
 	</div>
