--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -35,7 +35,7 @@
             <input type="handle" class="form-control" name="handle">
         </div>
         <div class="form-group">
-            <label>tag</label>
+            <label>tag must be 4 digits</label>
             <input type="number" class="form-control" name="tag">
         </div>
 
