--- a/views/completeGame.ejs
+++ b/views/completeGame.ejs
@@ -75,12 +75,6 @@
 						<div class="col-xs-2">
 							<h3>Target</h3>
 						</div>
-						<div class="col-xs-2">
-							<h3>Tag Number</h3>
-						</div>
-						<div class="col-xs-2">
-							<h3>Email</h3>
-						</div>
 						<div class="col-xs-3">
 							<h3>Still Active?</h3>
 						</div>
@@ -103,6 +97,13 @@
 				<div class="col-xs-2">
 					<% if (game.targets[index]) { %>
 					<%= game.targets[index].local.handle %> 
+					<%}%> 
+
+				</div>
+
+				<div class="col-xs-2">
+					<% if (game.targets[index]) { %>
+					<%= game.targets[index].local.alive %> 
 					<%}%> 
 
 				</div>
