--- a/views/completeGame.ejs
+++ b/views/completeGame.ejs
@@ -127,7 +127,7 @@
 			</div>
 
 			<div class="col-xs-6 submit">
-				
+				<span>After assigning targets press:</span>
 				<button type="submit" onclick="finalizeGame()" id="finalizeGame" class="btn btn-primary">Finalize Game</button>
 			</div>
 
