--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -56,7 +56,7 @@
 
 		<div class="row">
 			<div class="col-xs-12 col-xs-offset-4">
-				<h1><span class="glyphicon glyphicon-chevron-right"></span>Game Console</h1>
+				<h1><span class="glyphicon glyphicon-chevron-right"></span> Game Console</h1>
 			</div>
 			<div class="col-xs-4" id="imageContainer">
 				<img src="/images/skull.png" class="fakePhotoForSizing">
@@ -65,8 +65,8 @@
 			<div class="col-xs-4">
 				<ul>
 					<div class="container">
-					  <h2>Your Target: <%= user.local.tag %> </h2>
-					  <h3>Enter target's tag number to confirm elimination:</h3>                                                                               
+					  <h2>Your target: <%= user.local.tag %> </h2>
+					  <h3 class="confirmTagText">Enter target's tag number to confirm elimination:</h3>                                                                               
 					</div>
 					<div class="col-xs-8">
 						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="Agent Tag Number">
