Highest form of fubar

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -23,7 +23,7 @@ body {
 
 #ImageContainer { width: 300px; }
 
-img.fakePhotoForSizing {
+img.agentPicture {
     width:100%;
 	padding-bottom: 45px;
 }
