--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -51,15 +51,11 @@
 	</div>
 
 	<div class="container box-two">
-		<!-- <div class="row" id="AgentPicture">
-			<div class="col-xs-offset-1 col-xs-4">
-				<img src="<%=player.pic%>">
-			</div>
-		</div> -->
+		
 
 		<div class="row">
 			<div class="col-xs-4" id="imageContainer">
-				<img src="/images/skull.png" class="fakePhotoForSizing">
+				<img src="<%=user.local.pic%>" class="agentPicture">
 			</div>
 
 			<div class="col-xs-4">
