--- a/views/creategame.ejs
+++ b/views/creategame.ejs
@@ -49,13 +49,13 @@
 				<input type="text" class="form-control" name="moderator" placeholder="">
 			</div>
 			<div class="input-group col-xs-offset-1 col-xs-10">
-				<span class="input-group-addon" id="basic-addon1">Start Date</span>
-				<input type="text" class="form-control" name="startTime" placeholder="What day will the game begin?">
+				<span class="input-group-addon" id="basic-addon1">Start Day</span>
+				<input type="text" class="form-control" name="startTime" placeholder="All games begin at midnight">
 			</div>
 			
 			<div class="input-group col-xs-offset-1 col-xs-10">
-				<span class="input-group-addon" id="basic-addon1">End Date</span>
-				<input type="text" class="form-control" name="endTime" placeholder="What day will the game end?">
+				<span class="input-group-addon" id="basic-addon1">End Day</span>
+				<input type="text" class="form-control" name="endTime" placeholder="All games end at midnight">
 			</div>
 			
 			<div class="input-group col-xs-offset-1 col-xs-10">
