--- a/views/creategame.ejs
+++ b/views/creategame.ejs
@@ -5,7 +5,8 @@
 	<link rel="stylesheet" type="text/css" href="/css/main.css">
 </head>
 <body>
-	<nav class="navbar navbar-default">
+
+<nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -25,8 +26,6 @@
             <li><a href="/profile">Profile</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/consolepage.html">Go Home</a></li>
-            <li><a href="/creategame">Go to Game</a></li>
-            <li><a href="/completeGame">Rules</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
@@ -52,12 +51,6 @@
 				<span class="input-group-addon" id="basic-addon1">Start Day</span>
 				<input type="text" class="form-control" name="startTime" placeholder="All games begin at midnight">
 			</div>
-			
-			<div class="input-group col-xs-offset-1 col-xs-10">
-				<span class="input-group-addon" id="basic-addon1">End Day</span>
-				<input type="text" class="form-control" name="endTime" placeholder="All games end at midnight">
-			</div>
-			
 			<div class="input-group col-xs-offset-1 col-xs-10">
 				<span class="input-group-addon" id="basic-addon1">Location</span>
 				<input type="text" class="form-control" name="location" placeholder="Where are you playing?">
