--- a/views/completeGame.ejs
+++ b/views/completeGame.ejs
@@ -17,9 +17,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand"><img alt="Paranoia Logo" src="images/paraCopy.png"></a>
-      	
-    </div>
+      <a class="navbar-brand"><img alt="Paranoia Logo" src="images/paraCopy.png"></a>  </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
