--- a/views/completeGame.ejs
+++ b/views/completeGame.ejs
@@ -15,7 +15,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand"><img alt="Paranoia Logo" src="images/paraCopy.png"></a>
+      <a class="navbar-brand"><img alt="Paranoia Logo" src="../images/paraCopy.png"></a>
       	
     </div>
 
