--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,7 @@ body {
 	border-width: 5px;
 	border-style: double;
 	padding-top: 40px;
+	margin-bottom: 50px;
 }
 
 .confirmTagText {
@@ -30,6 +31,11 @@ body {
 img.agentPicture {
     width:100%;
 	padding-bottom: 45px;
+	padding-left: 20px;
+}
+
+.creategamebtn {
+	padding-bottom: 15px;
 }
 
 /*close profile.ejs css */
