--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,10 +61,10 @@
 				<ul>
 					<div class="container">
 					  <h2>Your target: Cobra </h2>
-					  <h3 class="confirmTagText">Enter target's tag number to confirm elimination:</h3>                                                                               
+					  <h3 class="confirmTagText">Enter tag number to confirm elimination:</h3>                                                                               
 					</div>
 					<div class="col-xs-8">
-						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="Agent Tag Number">
+						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="Agent Tag #">
 					</div>
 					<div class="col-xs-3">
 						<a class="btn btn-success" href="./profile2.html" role="button">Submit Tag #</a>
