--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,9 @@
 <body>
 <div class="container-fluid">
 <div class="jumbotron banner"> 
-	<h1><img src="images/para.png"></h1>
+	<div id="eyeLogo">
+	<h1><img src="images/para.png" ></h1>
+	</div>
 	<p>Feel Them Watching</p>
 	
 	<a href="/login" class="btn btn-default"><span class="fa fa-user"></span>  Login</a>
