Added Winning Page from profile2

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,8 +10,8 @@
 <body>
 <div class="container-fluid">
 <div class="jumbotron banner"> 
-	<div id="eyeLogo">
-	<h1><img src="images/para.png" ></h1>
+	<div id="eyeLogo" class= "eyelogo rotate-y">
+	<h1><img src="images/para.png"></h1>
 	</div>
 	<p>Feel Them Watching</p>
 	
