--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -11,7 +11,7 @@
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
       
-      <a class="navbar-brand"><img alt="Paranoia Logo" src="images/paraCopy.png"></a>
+      <a class="navbar-brand"><img alt="Paranoia Logo" id="eyeLogo" src="images/paraCopy.png"></a>
       	
     </div>
 
