changed navbar from Start a Game to Create a Game and updated rules

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -26,7 +26,7 @@
             <li><a href="/profile">Profile</a></li>
             <li><a href="/signup">Sign Up</a></li>
             <li><a href="/consolepage.html">Go Home</a></li>
-            <li><a href="/creategame">Start A Game</a></li>
+            <li><a href="/creategame">Create A Game</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="/logout">Logout</a></li>
           </ul>
@@ -64,17 +64,11 @@
 					  <h3 class="confirmTagText">Enter tag number to confirm elimination:</h3>                                                                               
 					</div>
 					<div class="col-xs-8">
-						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="Agent Tag #">
+						<input id="tagGetter" type="text" class="form-control" name="tag" placeholder="">
 					</div>
 					<div class="col-xs-3">
 						<a class="btn btn-success" href="./profile2.html" role="button">Submit Tag #</a>
 						<!-- <button href="../public/profile2.html" class="btn btn-success">Submit Tag #</button> -->
-					</div>
-					<div class="col-xs-12">
-						<br>
-						<br>
-						<br>
-						<a href="/createGame" class="btn btn-default"><span class="fa fa-user"></span>Create Game</a>
 					</div>
 				</ul>	
 			</div>
